# agentrails

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  Makefile  README.md  TASKPLAN.md  TASKPLAN_PROMPTS.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agentrails/: __init__.py  cli.py  config.py  dag.py  display.py  dsl_parser.py  engine.py  event_log.py  output.py  prompt_composer.py  session_manager.py  state.py  storage.py  storage_postgres.py  storage_sqlite.py  template.py  utils.py
agentrails/prompts/: __init__.py  base.md
agentrails/steps/: __init__.py  agent_step.py  base.py  conditional_step.py  human_step.py  loop_step.py  parallel_step.py  shell_step.py
docs/: WORKFLOW_AUTHORING.md  prompt-guide.md
examples/: README-slack-example.md  parallel_tests.yaml  retry_loop.yaml  simple_linear.yaml  slack_platform_updates.yaml  test_human.yaml  test_loop.yaml
examples/prompts/: code_only.md
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_dag.py  test_dsl_parser.py  test_engine.py  test_event_log.py  test_output.py  test_prompt_composition.py  test_prompts.py  test_session_manager.py  test_state.py  test_storage.py  test_storage_sqlite.py  test_template.py
tests/fixtures/: bad_dep.yaml  conditional.yaml  cyclic.yaml  linear.yaml  loop.yaml  parallel.yaml  smoke.yaml  subagent.yaml  system_prompt_file.yaml
tests/fixtures/prompts/: architect.md
tests/integration/: mock_claude_cli.py  test_conditional_workflow.py  test_extended.py  test_linear_workflow.py  test_parallel_workflow.py  test_real_claude.py  test_replay.py  test_smoke.py
tests/test_steps/: __init__.py  test_agent_step.py  test_base_step.py  test_conditional_step.py  test_human_step.py  test_loop_step.py  test_parallel_step.py  test_shell_step.py  test_shell_step_exec.py
